--- a/TpgAutomation/reports/Spark.html
+++ b/TpgAutomation/reports/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Test Resuts</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Oct 11, 2021 12:42:12 AM</span></a>
+<a href="#"><span class="badge badge-primary">Oct 11, 2021 06:58:23 PM</span></a>
 </li>
 </ul>
 </div>
@@ -74,7 +74,7 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="1"
+        <li class="test-item"  status="pass" test-id="12"
           author=""
           tag=""
           device="">
@@ -84,147 +84,16 @@
           <div class="test-detail">
             <span class="meta text-white badge badge-sm"></span>
             <p class="name">Launch Browser</p>
-            <p class="text-sm"><span>00:42:14 AM</span> / <span>0.006 secs</span></p>
+            <p class="text-sm"><span>18:58:24 PM</span> / <span>0.001 secs</span></p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<div class='float-right'><span class='badge badge-default'>#test-id=1</span></div>
+<div class='float-right'><span class='badge badge-default'>#test-id=12</span></div>
 <h5 class="test-status text-pass">Launch Browser</h5>
-<span class='badge badge-success'>10.11.2021 00:42:14</span>
-<span class='badge badge-danger'>10.11.2021 00:42:14</span>
-<span class='badge badge-default'>0.006 secs</span>
-</div>
-</div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:14 AM</td>
-        <td>
-          <span class='badge white-text green'>Chrome Driver has been Launching.</span>
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:14 AM</td>
-        <td>
-          <span class='badge white-text green'>Chromer Driver has been launched Successfully.</span>
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
-        </li>
-        <li class="test-item"  status="pass" test-id="2"
-          author=""
-          tag=""
-          device="">
-          <div class="status-avatar pass-bg">
-            <i class="fa fa-check text-white"></i>
-          </div>
-          <div class="test-detail">
-            <span class="meta text-white badge badge-sm"></span>
-            <p class="name">TPG Admin Portal</p>
-            <p class="text-sm"><span>00:42:15 AM</span> / <span>0 secs</span></p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<div class='float-right'><span class='badge badge-default'>#test-id=2</span></div>
-<h5 class="test-status text-pass">TPG Admin Portal</h5>
-<span class='badge badge-success'>10.11.2021 00:42:15</span>
-<span class='badge badge-danger'>10.11.2021 00:42:15</span>
-<span class='badge badge-default'>0 secs</span>
-</div>
-</div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:15 AM</td>
-        <td>
-          <span class='badge white-text green'>TPG Admin Portal has been opened Successfully!.</span>
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:15 AM</td>
-        <td>
-          <span class='badge white-text green'>Email and Password fields are available for login!.</span>
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
-        </li>
-        <li class="test-item"  status="pass" test-id="3"
-          author=""
-          tag=""
-          device="">
-          <div class="status-avatar pass-bg">
-            <i class="fa fa-check text-white"></i>
-          </div>
-          <div class="test-detail">
-            <span class="meta text-white badge badge-sm"></span>
-            <p class="name">Enter Admin Credentials</p>
-            <p class="text-sm"><span>00:42:16 AM</span> / <span>0 secs</span></p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<div class='float-right'><span class='badge badge-default'>#test-id=3</span></div>
-<h5 class="test-status text-pass">Enter Admin Credentials</h5>
-<span class='badge badge-success'>10.11.2021 00:42:16</span>
-<span class='badge badge-danger'>10.11.2021 00:42:16</span>
-<span class='badge badge-default'>0 secs</span>
-</div>
-</div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:16 AM</td>
-        <td>
-          <span class='badge white-text green'>Email and Password has been entered</span>
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
-        </li>
-        <li class="test-item"  status="pass" test-id="4"
-          author=""
-          tag=""
-          device="">
-          <div class="status-avatar pass-bg">
-            <i class="fa fa-check text-white"></i>
-          </div>
-          <div class="test-detail">
-            <span class="meta text-white badge badge-sm"></span>
-            <p class="name">Admin Login</p>
-            <p class="text-sm"><span>00:42:16 AM</span> / <span>0.001 secs</span></p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<div class='float-right'><span class='badge badge-default'>#test-id=4</span></div>
-<h5 class="test-status text-pass">Admin Login</h5>
-<span class='badge badge-success'>10.11.2021 00:42:16</span>
-<span class='badge badge-danger'>10.11.2021 00:42:16</span>
+<span class='badge badge-success'>10.11.2021 18:58:24</span>
+<span class='badge badge-danger'>10.11.2021 18:58:24</span>
 <span class='badge badge-default'>0.001 secs</span>
 </div>
 </div>
@@ -234,7 +103,138 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:16 AM</td>
+        <td>6:58:24 PM</td>
+        <td>
+          <span class='badge white-text green'>Chrome Driver has been Launching.</span>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>6:58:24 PM</td>
+        <td>
+          <span class='badge white-text green'>Chromer Driver has been launched Successfully.</span>
+        </td>
+      </tr>
+  </tbody>
+</table>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="pass" test-id="13"
+          author=""
+          tag=""
+          device="">
+          <div class="status-avatar pass-bg">
+            <i class="fa fa-check text-white"></i>
+          </div>
+          <div class="test-detail">
+            <span class="meta text-white badge badge-sm"></span>
+            <p class="name">TPG Admin Portal</p>
+            <p class="text-sm"><span>18:58:30 PM</span> / <span>0 secs</span></p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<div class='float-right'><span class='badge badge-default'>#test-id=13</span></div>
+<h5 class="test-status text-pass">TPG Admin Portal</h5>
+<span class='badge badge-success'>10.11.2021 18:58:30</span>
+<span class='badge badge-danger'>10.11.2021 18:58:30</span>
+<span class='badge badge-default'>0 secs</span>
+</div>
+</div>
+</div><div class="detail-body mt-4">
+<table class="table table-sm">
+  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
+  <tbody>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>6:58:30 PM</td>
+        <td>
+          <span class='badge white-text green'>TPG Admin Portal has been opened Successfully!.</span>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>6:58:30 PM</td>
+        <td>
+          <span class='badge white-text green'>Email and Password fields are available for login!.</span>
+        </td>
+      </tr>
+  </tbody>
+</table>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="pass" test-id="14"
+          author=""
+          tag=""
+          device="">
+          <div class="status-avatar pass-bg">
+            <i class="fa fa-check text-white"></i>
+          </div>
+          <div class="test-detail">
+            <span class="meta text-white badge badge-sm"></span>
+            <p class="name">Enter Admin Credentials</p>
+            <p class="text-sm"><span>18:58:30 PM</span> / <span>0 secs</span></p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<div class='float-right'><span class='badge badge-default'>#test-id=14</span></div>
+<h5 class="test-status text-pass">Enter Admin Credentials</h5>
+<span class='badge badge-success'>10.11.2021 18:58:30</span>
+<span class='badge badge-danger'>10.11.2021 18:58:30</span>
+<span class='badge badge-default'>0 secs</span>
+</div>
+</div>
+</div><div class="detail-body mt-4">
+<table class="table table-sm">
+  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
+  <tbody>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>6:58:30 PM</td>
+        <td>
+          <span class='badge white-text green'>Email and Password has been entered</span>
+        </td>
+      </tr>
+  </tbody>
+</table>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="pass" test-id="15"
+          author=""
+          tag=""
+          device="">
+          <div class="status-avatar pass-bg">
+            <i class="fa fa-check text-white"></i>
+          </div>
+          <div class="test-detail">
+            <span class="meta text-white badge badge-sm"></span>
+            <p class="name">Admin Login</p>
+            <p class="text-sm"><span>18:58:30 PM</span> / <span>0 secs</span></p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<div class='float-right'><span class='badge badge-default'>#test-id=15</span></div>
+<h5 class="test-status text-pass">Admin Login</h5>
+<span class='badge badge-success'>10.11.2021 18:58:30</span>
+<span class='badge badge-danger'>10.11.2021 18:58:30</span>
+<span class='badge badge-default'>0 secs</span>
+</div>
+</div>
+</div><div class="detail-body mt-4">
+<table class="table table-sm">
+  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
+  <tbody>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>6:58:30 PM</td>
         <td>
           <span class='badge white-text green'>User with Email superadmin@easypay.telenor.pkhas been logged in!.</span>
         </td>
@@ -244,7 +244,7 @@
 </div>
           </div>
         </li>
-        <li class="test-item"  status="pass" test-id="5"
+        <li class="test-item"  status="pass" test-id="16"
           author=""
           tag=""
           device="">
@@ -254,16 +254,16 @@
           <div class="test-detail">
             <span class="meta text-white badge badge-sm"></span>
             <p class="name">TPG Admin Portal</p>
-            <p class="text-sm"><span>00:42:16 AM</span> / <span>0 secs</span></p>
+            <p class="text-sm"><span>18:58:31 PM</span> / <span>0 secs</span></p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<div class='float-right'><span class='badge badge-default'>#test-id=5</span></div>
+<div class='float-right'><span class='badge badge-default'>#test-id=16</span></div>
 <h5 class="test-status text-pass">TPG Admin Portal</h5>
-<span class='badge badge-success'>10.11.2021 00:42:16</span>
-<span class='badge badge-danger'>10.11.2021 00:42:16</span>
+<span class='badge badge-success'>10.11.2021 18:58:31</span>
+<span class='badge badge-danger'>10.11.2021 18:58:31</span>
 <span class='badge badge-default'>0 secs</span>
 </div>
 </div>
@@ -273,16 +273,16 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:16 AM</td>
+        <td>6:58:31 PM</td>
         <td>
-          <span class='badge white-text green'>Transaction history screen is openeing .</span>
+          <span class='badge white-text green'>Settlement Transaction history screen is openeing .</span>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:16 AM</td>
+        <td>6:58:31 PM</td>
         <td>
-          <span class='badge white-text green'>Transaction history screen has been opened Successfully.</span>
+          <span class='badge white-text green'> Settlement Transaction history screen has been opened Successfully.</span>
         </td>
       </tr>
   </tbody>
@@ -290,7 +290,7 @@
 </div>
           </div>
         </li>
-        <li class="test-item"  status="pass" test-id="6"
+        <li class="test-item"  status="pass" test-id="17"
           author=""
           tag=""
           device="">
@@ -300,17 +300,17 @@
           <div class="test-detail">
             <span class="meta text-white badge badge-sm"></span>
             <p class="name">TPG Admin Portal</p>
-            <p class="text-sm"><span>00:42:17 AM</span> / <span>0 secs</span></p>
+            <p class="text-sm"><span>18:58:33 PM</span> / <span>0.001 secs</span></p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<div class='float-right'><span class='badge badge-default'>#test-id=6</span></div>
+<div class='float-right'><span class='badge badge-default'>#test-id=17</span></div>
 <h5 class="test-status text-pass">TPG Admin Portal</h5>
-<span class='badge badge-success'>10.11.2021 00:42:17</span>
-<span class='badge badge-danger'>10.11.2021 00:42:17</span>
-<span class='badge badge-default'>0 secs</span>
+<span class='badge badge-success'>10.11.2021 18:58:33</span>
+<span class='badge badge-danger'>10.11.2021 18:58:33</span>
+<span class='badge badge-default'>0.001 secs</span>
 </div>
 </div>
 </div><div class="detail-body mt-4">
@@ -319,37 +319,37 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:17 AM</td>
+        <td>6:58:33 PM</td>
         <td>
-          <span class='badge white-text green'>Transaction history screen is searching latest transaction.</span>
+          <span class='badge white-text green'>Settlement Transaction history screen is searching latest transaction.</span>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:17 AM</td>
+        <td>6:58:33 PM</td>
         <td>
-          <span class='badge white-text green'>Transaction history screen has searched the latest transaction.</span>
+          <span class='badge white-text green'>Settlement Transaction history screen has searched the latest transaction.</span>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:17 AM</td>
+        <td>6:58:33 PM</td>
         <td>
-          <span class='badge white-text green'>OPS ID : 337853</span>
+          <span class='badge white-text green'>OPS ID : 337910</span>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:17 AM</td>
+        <td>6:58:33 PM</td>
         <td>
-          <span class='badge white-text green'>ORDER ID : 128316256971</span>
+          <span class='badge white-text green'>ORDER ID : test</span>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:42:17 AM</td>
+        <td>6:58:33 PM</td>
         <td>
-          <span class='badge white-text green'>TRANSACTION STATUS : FAILED</span>
+          <span class='badge white-text green'>TRANSACTION STATUS : INITIATED</span>
         </td>
       </tr>
   </tbody>
@@ -371,13 +371,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Oct 11, 2021 12:42:12 AM</h3>
+<h3>Oct 11, 2021 06:58:23 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Oct 11, 2021 12:42:17 AM</h3>
+<h3>Oct 11, 2021 06:58:33 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
